0022689: Infinite loop in BRepExtrema_DistanceSS, in static function TRIM_INFINIT_FACE